--- a/ddbstyle.css
+++ b/ddbstyle.css
@@ -11,7 +11,7 @@ body {
     display:flex;
     background-color: rgba(255, 255, 255, 0.438);
     background-blend-mode: lighten;
-    background-image: url('bg.jpg');
+    background-image: url('images/bg.jpg');
     background-size: cover;
 }
 
@@ -49,7 +49,7 @@ body {
     position: absolute;
     background-color: rgba(248, 248, 248, 0.577);
     background-blend-mode:lighten;
-    background-image: url('oatmeal.jpg');
+    background-image: url('images/oatmeal.jpg');
     width: 300px;
     height: 300px;
     border-radius: 20px;
@@ -95,7 +95,7 @@ body {
 .diet-plan2 {
     background-color: rgba(248, 248, 248, 0.577);
     background-blend-mode:lighten;
-    background-image: url('chicken.jpg');
+    background-image: url('images/chicken.jpg');
     background-position: -20%;
     border-radius: 20px;
     margin-left: 120%;
@@ -161,7 +161,7 @@ body {
 .diet-plan3 {
     background-color: rgba(248, 248, 248, 0.577);
     background-blend-mode:lighten;
-    background-image: url('salmon.jpg');
+    background-image: url('images/salmon.jpg');
     background-position: 50%;
     border-radius: 20px;
     margin-left: 240%;
@@ -613,11 +613,3 @@ body {
     margin-left: 115%;
     margin-top: -100%;
 }
-
-
-
-
-
-
-
-
