--- a/diabeticstyle.css
+++ b/diabeticstyle.css
@@ -11,7 +11,7 @@ body {
     display: flex; 
     background-color: rgba(255, 255, 255, 0.438);
     background-blend-mode: lighten;
-    background-image: url('bg.jpg');
+    background-image: url('images/bg.jpg');
     background-size: cover;
     overflow: auto;
 }
