--- a/lbsstyle.css
+++ b/lbsstyle.css
@@ -11,7 +11,7 @@ body {
     display:flex;
     background-color: rgba(255, 255, 255, 0.438);
     background-blend-mode: lighten;
-    background-image: url('bg.jpg');
+    background-image: url('images/bg.jpg');
     background-size: cover;
 }
 
@@ -49,7 +49,7 @@ body {
     position: absolute;
     background-color: rgba(248, 248, 248, 0.577);
     background-blend-mode:lighten;
-    background-image: url('yogurt.jpg');
+    background-image: url('images/yogurt.jpg');
     width: 300px;
     height: 300px;
     border-radius: 20px;
@@ -95,7 +95,7 @@ body {
 .diet-plan2 {
     background-color: rgba(248, 248, 248, 0.577);
     background-blend-mode:lighten;
-    background-image: url('salad.jpg');
+    background-image: url('images/salad.jpg');
     border-radius: 20px;
     margin-left: 120%;
     position: relative;
@@ -160,7 +160,7 @@ body {
 .diet-plan3 {
     background-color: rgba(248, 248, 248, 0.577);
     background-blend-mode:lighten;
-    background-image: url('chapati.jpg');
+    background-image: url('images/chapati.jpg');
     background-position: 50%;
     border-radius: 20px;
     margin-left: 240%;
@@ -605,11 +605,3 @@ body {
     margin-left: 115%;
     margin-top: -100%;
 }
-
-
-
-
-
-
-
-
